Make Registry the sole view-aware owner of celestial children.
Compose registered hierarchy and materialized belt minors in CelestialRegistry.children(view). Client and starmap projection become adapters; remove the one-consumer DynamicCelestialObjectProvider SPI and dynamicChildren API entry.